# nbody-simulator-docker

./: .dockerignore  .env  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  NBodyGraphic  README.md  docker-compose-generator.py  docker-compose.yml  imgui.ini  nbody  run-opengl.sh  test.sh
.github/workflows/: cmake.yml
NBodyCalculator/: CMakeLists.txt  NBodyCalculator  main.cpp
NBodyGraphics/: CMakeLists.txt  InputManager.cpp  NBodyGraphics  NBodySimulatorGraphicsLauncher.cpp  NBodySimulatorGraphicsLauncher.h  main.cpp
NBodyGraphics/FfmpegPiper/: FfmpegPiper.cpp  FfmpegPiper.h
NBodyGraphics/QueryEntities/: QueryEntities.cpp  QueryEntities.h
NBodyGraphics/Recorder/: Recorder.cpp  Recorder.h
NBodyGraphics/Scene/: Scene.cpp  Scene.h
NBodyGraphics/Scene/Entity/: Entity.cpp  Entity.h
NBodyGraphics/Scene/Entity/Cube/: Cube.cpp
NBodyGraphics/Scene/Entity/NBodySimulator/: NBodySimulatorGraphic.cpp  NBodySimulatorGraphic.h
NBodyGraphics/Scene/Entity/QueryEntities/: QueryEntities.cpp  QueryEntities.h
NBodySimulator/: CMakeLists.txt  InputManager.cpp  NBodySimulatorLauncher.cpp  NBodySimulatorLauncher.h  main.cpp
NBodySimulator/Recording/: Recorder.cpp  Recorder.h
NBodySimulator/Scene/: Scene.cpp  Scene.h
NBodySimulator/Scene/Entity/NBodySimulator/: NBodySimulator.cpp  NBodySimulator.h
NBodySimulator/Scene/Entity/NBodySimulatorSSBO/: NBodySimulatorSSBO.cpp  NBodySimulatorSSBO.h
docker/: docker-compose.yml  future  index.html  launch.sh  testApi.sh
docker/api/: .dockerignore  Dockerfile  index.js  package-lock.json  package.json  setup.sh
docker/ffmpeg/: Dockerfile
docker/graphics/: Dockerfile
shaders/: NbodySimulator.vert
src/: CMakeLists.txt
src/NBodyCalculator/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  setup.sh
src/NBodyGraphics/: CMakeLists.txt  Dockerfile  InputManager.h  NBodyGraphics  NBodySimulatorGraphicsLauncher.cpp  NBodySimulatorGraphicsLauncher.h  main.cpp  run-opengl.sh
src/NBodyGraphics/FfmpegPiper/: FfmpegPiper.h
src/NBodyGraphics/QueryEntities/: QueryCallbackParameter.cpp  QueryCallbackParameter.h  QueryEntities.cpp  QueryEntities.h
src/NBodyGraphics/Recorder/: Recorder.cpp  Recorder.h
src/NBodyGraphics/Scene/: Scene.h
src/NBodyGraphics/Scene/Camera/: Camera.h
src/NBodyGraphics/Scene/Entity/Cube/: Cube.h
src/NBodyGraphics/Scene/Entity/NBodySimulator/: NBodySimulatorGraphic.cpp  NBodySimulatorGraphic.h
src/NBodyGraphics/Shader/: Shader.cpp  Shader.h
